# Esp_Scripts

./: README.md  environmental_monitor.cpp  firmware_updater_wifi.cpp  motor_control.cpp  object_detection.cpp  voice_recognition.cpp
main/: CMakeLists.txt  firmware_updater_wifi_idf.cpp  object_detection_idf.cpp  voice_recognition_idf.cpp
